--- a/Modulo-1/Ejercicios-1.4/Ejercicio 3/index.html
+++ b/Modulo-1/Ejercicios-1.4/Ejercicio 3/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <h1 class="title">Justificar contenidos</h1>
-  <div class="container">
-    <div class="item item1">Home</div>
-    <div class="item item2">Proyectos</div>
-    <div class="item item3">Equipo</div>
-    <div class="item item4">Blog</div>
-    <div class="item item5">Contacto</div>
-
-  </div>
-
-</body>
-
+  <body>
+    <h1 class="title">Justificar contenidos</h1>
+    <div class="container">
+      <div class="item item1">Home</div>
+      <div class="item item2">Proyectos</div>
+      <div class="item item3">Equipo</div>
+      <div class="item item4">Blog</div>
+      <div class="item item5">Contacto</div>
+    </div>
+  </body>
 </html>
