Add exercise 3 lesson 1.12

--- a/Modulo-1/SPOTIFY/index.html
+++ b/Modulo-1/SPOTIFY/index.html
@@ -59,42 +59,64 @@
           <h2>
             ¿Por qué pasarte a Premium?
           </h2>
-          <div>
-            <article>
-              <img src="" alt="Descarga música" />
-              <h3>
-                Descarga música
-              </h3>
-              <p>
-                Llévala siempre contigo
-              </p>
+          <div class="options-items">
+            <article class="option">
+              <div class="option-img">
+                <img src="./images/benefit-1.png" alt="Descarga música" />
+              </div>
+              <div class="option-text">
+                <h3>
+                  Descarga música
+                </h3>
+                <p>
+                  Llévala siempre contigo
+                </p>
+              </div>
+            </article>
+            <article class="option">
+              <div class="option-img">
+                <img src="./images/benefit-2.png" alt="Sin anuncios" />
+              </div>
+              <div class="option-text">
+                <h3>
+                  Sin anuncios
+                </h3>
+                <p>
+                  Disfruta de música sin interrupciones
+                </p>
+              </div>
             </article>
             <article>
-              <img src="" alt="Sin anuncios" />
-              <h3>
-                Sin anuncios
-              </h3>
-              <p>
-                Disfruta de música sin interrupciones
-              </p>
+              <div class="option-img">
+                <img
+                  src="./images/benefit-3.png"
+                  alt="Escucha lo que quieras"
+                />
+              </div>
+              <div class="option-text">
+                <h3>
+                  Escucha lo que quieras
+                </h3>
+                <p>
+                  Incluso en el móvil
+                </p>
+              </div>
             </article>
             <article>
-              <img src="" alt="Escucha lo que quieras" />
-              <h3>
-                Escucha lo que quieras
-              </h3>
-              <p>
-                Incluso en el móvil
-              </p>
-            </article>
-            <article>
-              <img src="" alt="Salta todas las canciones que quieras" />
-              <h3>
-                Salta todas las canciones que quieras
-              </h3>
-              <p>
-                Simplemente dale a siguiente
-              </p>
+              <div class="option-img">
+                <img
+                  src="./images/benefit-4.png"
+                  alt="Salta todas las canciones que quieras"
+                />
+              </div>
+              <div class="option-text">
+                <h3>
+                  Salta todas las canciones que quieras
+                </h3>
+                <p>
+                  Simplemente dale a siguiente
+                </p>
+              </div>
             </article>
           </div>
         </div>
