Add footer css grid

--- a/Modulo-1/SPOTIFY/index.html
+++ b/Modulo-1/SPOTIFY/index.html
@@ -125,17 +125,17 @@
     <footer class="footer">
       <div class="wrapper">
         <nav>
-          <ul>
+          <ul class="footer-menu">
             <li>
-              <a href="">Legal</a>
-              <a href="">Cookies</a>
-              <a href="">Información sobre los anuncios</a>
+              <a href="#">Legal</a>
+              <a href="#">Cookies</a>
+              <a href="#">Información sobre los anuncios</a>
             </li>
           </ul>
         </nav>
-        <div>
-          <span>España</span>
-          <span>Spotify AB</span>
+        <div class="copy">
+          <span>🇪🇸 España</span>
+          <span>&copy; Spotify AB</span>
         </div>
       </div>
     </footer>
