Add exercise 5 lesson 1.13

--- a/Modulo-1/SPOTIFY/index.html
+++ b/Modulo-1/SPOTIFY/index.html
@@ -40,23 +40,26 @@
     <main class="main">
       <section class="hero">
         <div class="wrapper">
-          <h1>
-            Prueba Premium gratis 3 meses
+          <h1 class="title">
+            <span>Prueba Premium</span>
+            <span>gratis 3 meses</span>
           </h1>
           <p>
             Escucha millones de canciones sin anuncios, a la carta y sin
             conexión.
           </p>
-          <a href="">Ver planes</a>
+          <a href="#" class="button">Ver planes</a>
           <p>
-            Rigen términos y condiciones. Los tres meses gratis no están
-            disponibles para usuarios que ya hayan probado Premium.
+            <small>
+              Rigen términos y condiciones. Los tres meses gratis no están
+              disponibles para usuarios que ya hayan probado Premium.
+            </small>
           </p>
         </div>
       </section>
       <section class="options">
         <div class="wrapper">
-          <h2>
+          <h2 class="secondary-title">
             ¿Por qué pasarte a Premium?
           </h2>
           <div class="options-items">
