Correct index.html

--- a/Modulo-1/SPOTIFY/index.html
+++ b/Modulo-1/SPOTIFY/index.html
@@ -64,7 +64,7 @@
           </h2>
           <div class="options-items">
             <article class="option">
-              <div class="option-img">
+              <div class="option-image">
                 <img src="./images/benefit-1.png" alt="Descarga música" />
               </div>
               <div class="option-text">
@@ -77,7 +77,7 @@
               </div>
             </article>
             <article class="option">
-              <div class="option-img">
+              <div class="option-image">
                 <img src="./images/benefit-2.png" alt="Sin anuncios" />
               </div>
               <div class="option-text">
@@ -89,8 +89,8 @@
                 </p>
               </div>
             </article>
-            <article>
-              <div class="option-img">
+            <article class="option">
+              <div class="option-image">
                 <img
                   src="./images/benefit-3.png"
                   alt="Escucha lo que quieras"
@@ -105,8 +105,8 @@
                 </p>
               </div>
             </article>
-            <article>
-              <div class="option-img">
+            <article class="option">
+              <div class="option-image">
                 <img
                   src="./images/benefit-4.png"
                   alt="Salta todas las canciones que quieras"
@@ -131,7 +131,11 @@
           <ul class="footer-menu">
             <li>
               <a href="#">Legal</a>
+            </li>
+            <li>
               <a href="#">Cookies</a>
+            </li>
+            <li>
               <a href="#">Información sobre los anuncios</a>
             </li>
           </ul>
