Add exercises to module 2

--- a/modulo-2/leccion-2.5/ejercicio-5/index.html
+++ b/modulo-2/leccion-2.5/ejercicio-5/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hola, click</title>
+    <title>Jugando con el teclado</title>
   </head>
   <body>
-    <p class="text">Hola</p>
-    <button type="bitton" name="button" class="change">Button</button>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
