--- a/modulo-2/leccion-2.12-dom-avanzado/ejercicio-1-añadir-elemento-al-dom/index.html
+++ b/modulo-2/leccion-2.12-dom-avanzado/ejercicio-1-añadir-elemento-al-dom/index.html
@@ -6,7 +6,7 @@
     <title>Ejercicio 1</title>
   </head>
   <body>
-    <ul class="js-items"></ul>
+    <ul class="js-items-list"></ul>
     <script src="./main.js"></script>
   </body>
 </html>
